# SimpleKanbanGUI

./: .gitignore  README.md
boveda/: kaban.md  kanban1.py  kanban2.py  kanban3.py  kanban4.py  kanban5.py
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/simple_kaban_gui/: about.py
src/simple_kanban_gui/: about.py  desktop.py  manager.py  program.py
src/simple_kanban_gui/modules/: configure.py  wabout.py
