[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_kanban_gui"
version = "0.1.1"
description = "A simple kanban graphic user interface"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/SimpleKanbanGUI/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Source" = "https://github.com/trucomanx/SimpleKanbanGUI"

[project.scripts]
"simple-kanban-gui" = "simple_kanban_gui.program:main"

[tool.setuptools]
packages = ["simple_kanban_gui", "simple_kanban_gui.modules"]

[tool.setuptools.package-data]
"simple_kanban_gui" = ["icons/logo.png"]
